--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,11 @@
     <groupId>org.example</groupId>
     <artifactId>MySpringBoot</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
-        <module>SSOService</module>
+        <module>ssos</module>
     </modules>
+
     <name>MySpringBoot</name>
     <!-- <packaging>jar</packaging> -->
     <packaging>pom</packaging>
@@ -42,9 +44,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>2.2.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <!-- spring-boot的web启动的jar包 -->
     <dependencies>
 
@@ -87,7 +90,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.21</version>
+            <version>5.1.48</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
         <dependency>
@@ -96,9 +99,16 @@
             <version>2.0.1</version>
         </dependency>
 
+<!--         mybatis整合spring boot jar包-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
     </dependencies>
 
-    <!--maven的插件
+    <!--maven的插件-->
     <build>
         <plugins>
             <plugin>
@@ -121,7 +131,7 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <configuration>
-                        <mainClass>com.lovo.boot.MainBoot</mainClass>
+                        <mainClass>com.example.ssos.SsosApplication</mainClass>
                     </configuration>
                     <executions>
                         <execution>
@@ -133,10 +143,11 @@
                 </plugin>
 
             </plugins>
+
         </pluginManagement>
 
 
 
     </build>
-    -->
+
 </project>
