--- a/springboots/src/main/resources/application.properties
+++ b/springboots/src/main/resources/application.properties
@@ -1,17 +1,13 @@
 
-server.port=8001
+server.port=8002
 spring.datasource.url=jdbc:mysql://localhost:3306/boot?useUnicode=true&;characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=080120qw
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
-spring.jpa.database=mysql
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
+mybatis.mapper-locations=classpath:mappers/*Mapper.xml
+mybatis.type-aliases-package=com.example.springboots.bean
 
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
