--- a/authoritymanagement/pom.xml
+++ b/authoritymanagement/pom.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-
-    <parent>
-        <artifactId>MySpringBoot</artifactId>
-        <groupId>org.example</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.6.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
     <groupId>com.example</groupId>
-    <artifactId>springboots</artifactId>
+    <artifactId>authoritymanagement</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboots</name>
+    <name>authoritymanagement</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -37,16 +35,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!--thymeleaf模板jar，是很不错的html数据传递取值，类似jsp的jstl-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-
-
     </dependencies>
-
 
     <build>
         <plugins>
