--- a/ssos/src/main/resources/application.properties
+++ b/ssos/src/main/resources/application.properties
@@ -1,18 +1,33 @@
+#Tomcat设置
+#端口号
+server.port=8002
+#编码集
+server.tomcat.uri-encoding=UTF-8
 
-server.port=8001
+#连接数据库
 spring.datasource.url=jdbc:mysql://localhost:3306/boot?useUnicode=true&;characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=080120qw
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-
+#springJPA
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+#mapper与实体类映射
+#mybatis.mapper-locations=classpath:mappers/*Mapper.xml
+#mybatis.type-aliases-package=com.example.springboots.bean
 
+#请求返回的设置
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+
+#对servlet的设置
+spring.thymeleaf.suffix=.html
+spring.mvc.static-path-pattern=classpath:/templates/
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
